changed font bc previous one wasn't responsive on safari. fixed margin

--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,7 @@
 .App {
   text-align: center;
-  font-family: 'Nanum Myeongjo', serif;
+  font-family: 'EB Garamond', serif;
   height: 100;
-  font-weight: 800px;
 }
 
 .projectDiv{
