--- a/src/Home.css
+++ b/src/Home.css
@@ -13,7 +13,7 @@
   font-size: 48px;
 }
 
-.Jarecki {
+.sJarecki {
   color: black;
 }
 
